--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
+    "coverage:badge": "coverage-badge-coverage-badges --output ./coverage-badge.json",
     "prepublishOnly": "npm run build",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -66,6 +67,7 @@
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "coverage-badges": "^1.0.7",
     "eslint": "^9.29.0",
     "jest": "^30.0.0",
     "ts-jest": "^29.4.0",
